@@ -1,3 +1,8 @@
+2011-09-25  Michael Albinus  <michael.albinus@gmx.de>
+
+	* dbusbind.c (Fdbus_register_signal): When service is not
+	registered, use nil in Vdbus_registered_objects_table.  (Bug#9581)
+
 2011-09-25  Glenn Morris  <rgm@gnu.org>
 
 	* buffer.c (truncate-lines): Doc fix.
